func_in.result, func_in.test:   Fixed bug #11885. sql_select.cc:   Fixed bug #11885.   Predicates of the forms 'a IN (v)' 'a NOT IN (v)' now   is replaced by 'a=v' and 'a<>v' at the parsing stage. sql_yacc.yy:   Fixed bug #11885.   Predicates of the forms 'a IN (v)' 'a NOT IN (v)' now   is replaced by 'a=v' and 'a<>v' at the parsing stage.